--- a/index.html
+++ b/index.html
@@ -52,18 +52,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
             <div class="header-container">
                 <h1>JHS Coding Club</h1>
                 <p>
@@ -96,6 +84,22 @@
                     >
                 </div></h2>
 
+
+
+
+
+
+
+
+
+                <h2>
+                <div class="cta">
+                    <a
+                        href="https://www.instagram.com/jhs_code/"
+                        target="_blank"
+                        >Instagram</a
+                    >
+                </div></h2>            
 
 
 
