--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <meta property="og:title" content="JHS Coding Club" />
         <meta
             property="og:description"
-            content="Compete in the All Student Hackathon 2025 — a thrilling one-day hackathon for programmers and creators of all levels"
+            content="JHS Coding Club"
         />
         <meta
             property="og:image"
-            content="https://googolgenius.github.io/all-student-hackathon-2025/favicon.png"
+            content="https://googolgenius.github.io/all-student-hackathon-2025/crschools.jpg"
         />
         <meta property="og:type" content="website" />
         <meta
@@ -37,7 +37,7 @@
 
         <title>JHS Coding Club</title>
         <link rel="stylesheet" href="style.css" />
-        <link rel="icon" href="favicon.png" type="image/x-icon" />
+        <link rel="icon" href="crschools.jpg" type="image/x-icon" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
