--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
             name="description"
             content="JHS Coding Club"
         />
-        <meta name="author" content="All Student Hackathon Team" />
+        <meta name="author" content="Jeffersons Coding Club" />
         <meta
             name="keywords"
-            content="hackathon, all student, coding event, tech, Cedar Rapids, software, 2025, register"
+            content="code, highschool, coding, tech, Cedar Rapids, software, 2025, register"
         />
         <meta property="og:title" content="JHS Coding Club" />
         <meta
