--- a/index.html
+++ b/index.html
@@ -1,110 +1,83 @@
+
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta
-            name="description"
-            content="JHS Coding Club"
-        />
-        <meta name="author" content="Jeffersons Coding Club" />
-        <meta
-            name="keywords"
-            content="code, highschool, coding, tech, Cedar Rapids, software, 2025, register"
-        />
-        <meta property="og:title" content="JHS Coding Club" />
-        <meta
-            property="og:description"
-            content="JHS Coding Club"
-        />
-        <meta
-            property="og:image"
-            content="https://googolgenius.github.io/all-student-hackathon-2025/crschools.jpg"
-        />
-        <meta property="og:type" content="website" />
-        <meta
-            property="og:url"
-            content="https://googolgenius.github.io/all-student-hackathon-2025/"
-        />
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="JHS Coding Club" />
+    <meta name="author" content="Jeffersons Coding Club" />
+    <meta name="keywords" content="code, highschool, coding, tech, Cedar Rapids, software, 2025, register" />
+    <meta property="og:title" content="JHS Coding Club" />
+    <meta property="og:description" content="JHS Coding Club" />
+    <meta property="og:image" content="https://googolgenius.github.io/all-student-hackathon-2025/crschools.jpg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://googolgenius.github.io/all-student-hackathon-2025/" />
 
+    <title>JHS Coding Club</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="crschools.jpg" type="image/x-icon" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Mono:wght@400;700&family=Pacifico&display=swap" rel="stylesheet" />
+</head>
+<body>
+    <!-- Navigation -->
+    <nav>
+        <div class="logo"><strong>JHS Coding Club</strong></div>
+        <div class="links">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="projects.html">Projects</a>
+        </div>
+    </nav>
 
-
-
-
-
-
-
-
-        <title>JHS Coding Club</title>
-        <link rel="stylesheet" href="style.css" />
-        <link rel="icon" href="crschools.jpg" type="image/x-icon" />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
-            rel="stylesheet"
-        />
-    </head>
-    <body>
-        <header>
-
-
-
-
-
-            <div class="header-container">
-                <h1>JHS Coding Club</h1>
-                <p>
-                This is Jefferson High Schools offical coding club website. Here you can find out what we do as a club and what you can do to help.
-                </p>
-
-        
-                </div>
+    <!-- Hero/Header -->
+    <header>
+        <div class="header-container">
+            <h1>JHS Coding Club</h1>
+            <p>
+                Welcome to Jefferson High School’s official Coding Club! Learn, build, and innovate with us.
+            </p>
+            <div class="cta">
+                <a href="about.html">Learn More</a>
             </div>
-        </header>
+        </div>
+    </header>
 
+    <!-- Mission Section -->
+    <section class="section-container">
+        <div class="info-box">
+            <h2>Our Mission</h2>
+            <p>
+                We aim to inspire Jefferson High students to explore technology, develop coding skills, and apply their creativity through real-world projects.
+            </p>
+        </div>
+    </section>
 
+    <!-- Guest Speakers Section -->
+    <section class="section-container">
+        <h2>Guest Speakers</h2>
+        <div class="info-box">
+            <p>
+                Our club regularly hosts guest speakers from tech and software careers. These talks inspire students by showing the many paths computer science can lead to.
+            </p>
+        </div>
 
+        <div class="cta">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxVOaNdsKPMFba6CWx1SLIHg5NZf8zROF7osJ8x9bDNVJmqA/viewform?usp=header" target="_blank">
+                Become a Guest Speaker
+            </a>
+        </div>
+        <div class="cta">
+            <a href="https://www.instagram.com/jhs_code/" target="_blank">
+                Follow Us on Instagram
+            </a>
+        </div>
+    </section>
 
-        <div class="Guest Speakers">
-                <h2>Guest Speakers</h2>
-                <div class="info-box">
-
-<p>As highschoolers it's in our best interest to learn more about different careers we might want to pursue as we grow up.
-    Our coding club attempts to gather guest speakers from different kinds of jobs that involve computer
-     science to show to students different ways they can impiment the code they learn here.</p>
-                </div>
-
-                <h2>
-                <div class="cta">
-                    <a
-                        href="https://docs.google.com/forms/d/e/1FAIpQLSfxVOaNdsKPMFba6CWx1SLIHg5NZf8zROF7osJ8x9bDNVJmqA/viewform?usp=header"
-                        target="_blank"
-                        >Become a guest speaker!</a
-                    >
-                </div></h2>
-
-
-
-
-
-
-
-
-<br>
-<br>
-
-            
-                <h2>
-                <div class="cta">
-                    <a
-                        href="https://www.instagram.com/jhs_code/"
-                        target="_blank"
-                        >Instagram</a
-                    >
-                </div></h2>            
-
-
-
-    </body>
+    <!-- Footer -->
+    <footer>
+        &copy; 2025 Jefferson High Coding Club
+    </footer>
+</body>
 </html>
