--- a/about.html
+++ b/about.html
@@ -35,10 +35,15 @@
             <div class="card">
                 <h3>Fatima Torres</h3>
                 <p>Founder & President</p>
+<a href="mailto:26ftorres@crschools.us" 
+   style="color: white; font-size: 12px; font-family: 'Comic Sans MS', cursive;">
+   Email
+</a>
+
             </div>
             <div class="card">
-                <h3>Alex Johnson</h3>
-                <p>Vice President</p>
+                <h3>Mr.Boomershine</h3>
+                <p>Advisor</p>
             </div>
         </div>
     </section>
