--- a/projects.html
+++ b/projects.html
@@ -25,16 +25,14 @@
         <div class="cards-container">
             <div class="card">
                 <h3>Robot Programming</h3>
-                <p>Students programmed robots to complete fun challenges and competitions.</p>
+                <p>Students tinkered and programmed robots.</p>
             </div>
             <div class="card">
                 <h3>Web Development</h3>
-                <p>Interactive websites created using HTML, CSS, and JavaScript.</p>
+                <p>Interactive websites created using HTML, CSS, and Phython</p>
             </div>
-            <div class="card">
-                <h3>Game Design</h3>
-                <p>Simple 2D games built to learn logic, problem-solving, and creativity.</p>
-            </div>
+
+            
         </div>
     </section>
 
