--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 
     <!-- Mission Section -->
-    <section class="section-container">
+    <section>
         <div class="info-box">
             <h2>Our Mission</h2>
             <p>
