--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
                 <h3>Fatima Torres</h3>
                 <p>Founder & President</p>
 <a href="mailto:26ftorres@crschools.us" 
-   style="color: white; font-size: 12px; font-family: 'Comic Sans MS', cursive;">
+   style="color: white; font-size: 12px">
    Email
 </a>
 
