--- a/about.html
+++ b/about.html
@@ -35,11 +35,15 @@
             <div class="card">
                 <h3>Fatima Torres</h3>
                 <p>Founder & President</p>
+
 <a href="mailto:26ftorres@crschools.us" 
-   style="color: white; font-size: 12px">
+   style="color: white; font-size: 12px; text-decoration: none;">
    Email
 </a>
 
+
+
+                
             </div>
             <div class="card">
                 <h3>Mr.Boomershine</h3>
