--- a/about.html
+++ b/about.html
@@ -36,9 +36,9 @@
                 <h3>Fatima Torres</h3>
                 <p>Founder & President</p>
 
-<a href="mailto:26ftorres@crschools.us" 
-   style="color: white; font-size: 20px; text-decoration: none;">
-   Email
+<p>Questions?</p><a href="mailto:26ftorres@crschools.us" 
+   style="color: white; font-size: 15px; text-decoration: none;">
+   Email Here
 </a>
 
 
