--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
                 <p>Founder & President</p>
 
 <p>Questions?</p><a href="mailto:26ftorres@crschools.us" 
-   style="color: white; font-size: 15px; text-decoration: none;">
+   style="color: white; text-decoration: none;">
    Email Here
 </a>
 
