--- a/about.html
+++ b/about.html
@@ -37,8 +37,7 @@
                 <p>Founder & President</p>
 
 <p>Questions?</p><a href="mailto:26ftorres@crschools.us" 
-   style="color: white; text-decoration: none;">
-   Email Here
+   style="color: white; text-decoration: none;">Email Here
 </a>
 
 
