--- a/index.html
+++ b/index.html
@@ -56,7 +56,15 @@
 </html>
 
 
-
+<div class="carousel">
+  <div class="carousel-track">
+    <img src="Jefferson2.png" alt="Club Activity 1">
+    <img src="placeholder2.jpg" alt="Club Activity 2">
+    <img src="placeholder3.jpg" alt="Club Activity 3">
+  </div>
+  <button class="prev">&#10094;</button>
+  <button class="next">&#10095;</button>
+</div>
 
 
 
@@ -106,5 +114,60 @@
     <footer>
         &copy; 2025 Jefferson High Coding Club
     </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- Your normal HTML stuff here -->
+
+<script>
+  const track = document.querySelector('.carousel-track');
+  const slides = Array.from(track.children);
+  const nextButton = document.querySelector('.next');
+  const prevButton = document.querySelector('.prev');
+
+  let currentIndex = 0;
+
+  function updateCarousel() {
+    track.style.transform = `translateX(-${currentIndex * 100}%)`;
+  }
+
+  nextButton.addEventListener('click', () => {
+    currentIndex = (currentIndex + 1) % slides.length;
+    updateCarousel();
+  });
+
+  prevButton.addEventListener('click', () => {
+    currentIndex = (currentIndex - 1 + slides.length) % slides.length;
+    updateCarousel();
+  });
+</script>
 </body>
 </html>
+
+
+
