--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 
 <div class="carousel">
   <div class="carousel-track">
-    <img src="Jefferson2.png" alt="Club Activity 1">
-    <img src="placeholder2.jpg" alt="Club Activity 2">
-    <img src="placeholder3.jpg" alt="Club Activity 3">
+    <img src="club.png" alt="Club Activity 1">
+    <img src="club2.png" alt="Club Activity 2">
+    <img src="club3.png" alt="Club Activity 3">
   </div>
   <button class="prev">&#10094;</button>
   <button class="next">&#10095;</button>
