--- a/index.html
+++ b/index.html
@@ -35,6 +35,22 @@
 
 
 
+<!-- Hero/Header -->
+<header>
+  <div class="header-container">
+    <h1>JHS Coding Club</h1>
+    <p>
+      Welcome to Jefferson High School’s official Coding Club! Learn, build, and innovate with us.
+    </p>
+    <div class="cta">
+      <a href="about.html">Learn More</a>
+    </div>
+  </div>
+</header>
+
+
+
+  
 
 <div class="carousel">
   <div class="carousel-track">
