--- a/about.html
+++ b/about.html
@@ -36,9 +36,9 @@
                 <h3>Fatima Torres</h3>
                 <p>Founder & President</p>
 
-<p>Questions?</p><a href="mailto:26ftorres@crschools.us" 
+<p>Questions?<a href="mailto:26ftorres@crschools.us" 
    style="color: white; text-decoration: none;">Email Here
-</a>
+</a></p>
 
 
 
