--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
   
   <!-- Hero/Header -->
 <header>
-  <div class="header-container">
-    <h1>JHS Coding Club</h1>
+        <div class="info-box">
+          
+          
+        <h1>JHS Coding Club</h1>
     <p>
       Welcome to Jefferson High School’s official Coding Club! Learn, build, and innovate with us.
     </p>
