--- a/index.html
+++ b/index.html
@@ -38,8 +38,6 @@
 <br>
 <br>
 <br>
-<br>
-<br>
   
   <!-- Hero/Header -->
 <header>
@@ -85,7 +83,7 @@
 
     <!-- Mission Section -->
     <section>
-        <div class="info-box">
+    <section class="section-container">
             <h2>Our Mission</h2>
             <p>
                 We aim to inspire Jefferson High students to explore technology, develop coding skills, and apply their creativity through real-world projects.
