--- a/index.html
+++ b/index.html
@@ -83,12 +83,11 @@
 
     <!-- Mission Section -->
     <section>
-    <section class="section-container">
+    <section class="info-box">
             <h2>Our Mission</h2>
             <p>
                 We aim to inspire Jefferson High students to explore technology, develop coding skills, and apply their creativity through real-world projects.
             </p>
-        </div>
     </section>
 
     <!-- Guest Speakers Section -->
