--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
     <link rel="icon" href="crschools.jpg" type="image/x-icon" />
 </head>
 <body>
+    
     <nav>
         <div class="logo"><strong>JHS Coding Club</strong></div>
         <div class="links">
@@ -29,6 +30,11 @@
         </div>
     </section>
 
+
+
+
+
+    <center><div class="profile-pic"></div></center>
     <section class="section-container">
         <h2>Leadership</h2>
         <div class="cards-container">
