--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
             </a>
         </div>
 
-<br>      
-        <div class="cta">
+        <div class="cta;mb-1">
             <a href="https://www.instagram.com/jhs_code/" target="_blank">
                 Follow Us on Instagram
             </a>
