--- a/index.html
+++ b/index.html
@@ -113,7 +113,11 @@
 
     <!-- Footer -->
     <footer>
-        &copy; 2025 Jefferson High Coding Club
+<p>Location: 1243 20th Street, SW
+Cedar Rapids, IA 52404</p>
+      
+      
+      &copy; 2025 Jefferson High Coding Club
     </footer>
 
 
