--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
                 Become a Guest Speaker
             </a>
         </div>
-
-        <div class="cta;mb-1">
+<span style="display:block; margin-top:4px;">
+        <div class="cta">
             <a href="https://www.instagram.com/jhs_code/" target="_blank">
                 Follow Us on Instagram
-            </a>
-        </div>
+            </a></span>    
+    </div>
     </section>
 
     <!-- Footer -->
