--- a/index.html
+++ b/index.html
@@ -112,17 +112,23 @@
     </section>
 
     <!-- Footer -->
-    <footer>
-<p>Location: 1243 20th Street, SW
-Cedar Rapids, IA 52404</p>
-      
-      
-      &copy; 2025 Jefferson High Coding Club
-    </footer>
 
 
 
-
+  
+<footer style="
+  text-align: center; 
+  padding: 20px 10px; 
+  font-family: Arial, sans-serif; 
+  font-size: 14px;
+">
+  <p style="margin: 5px 0; font-weight: 500;">
+    1243 20th Street SW, Cedar Rapids, IA 52404
+  </p>
+  <p style="margin: 5px 0;">
+    &copy; 2025 Jefferson High Coding Club
+  </p>
+</footer>
 
 
 
