--- a/index.html
+++ b/index.html
@@ -137,6 +137,14 @@
     &copy; 2025 Jefferson High Coding Club
   </p>
   <br>
+
+    <div class="social-links">
+      <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+      <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+      <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://youtube.com" target="_blank"><i class="fab fa-youtube"></i></a>
+    </div>
+  
 </footer>
 
 
