--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
   <nav>
     <div class="logo">
       <img src="logo.png" alt="JHS Coding Club Logo" style="height:45px; vertical-align:middle; margin-right:10px;">
-      <strong>JHS Coding Club</strong>
+<strong style="color: white;">JHS Coding Club</strong>
+
+
+      
     </div>
     <div class="links">
       <a href="index.html">Home</a>
@@ -45,18 +48,6 @@
     </div>
   </header>
 
-  <!-- Carousel -->
-  <section class="section-container">
-    <div class="carousel">
-      <div class="carousel-track">
-        <img src="club.png" alt="Club Activity 1">
-        <img src="club2.png" alt="Club Activity 2">
-        <img src="club3.png" alt="Club Activity 3">
-      </div>
-      <button class="prev">&#10094;</button>
-      <button class="next">&#10095;</button>
-    </div>
-  </section>
 
   <!-- Mission Section -->
   <section class="section-container">
