--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <nav>
     <div class="logo">
       <img src="logo.png" alt="JHS Coding Club Logo" style="height:45px; vertical-align:middle; margin-right:10px;">
-<strong style="color: white;">JHS Coding Club</strong>
+<strong>JHS Coding Club</strong>
 
 
       
@@ -37,8 +37,8 @@
   <!-- Hero/Header -->
   <header class="section-container">
     <div class="header-container">
-      <h1>Jefferson High Coding Club</h1>
-      <p>
+      <h1 style="color: white">Jefferson High Coding Club</h1>
+      <p style="color: white;">
         Welcome to Jefferson High School’s official Coding Club!  
         Learn, build, and innovate with us as we explore the world of technology and creativity.
       </p>
