--- a/index.html
+++ b/index.html
@@ -80,41 +80,83 @@
 
 
 
-  
-  <!-- Mission Section -->
-    <div class="info-box">
-      <h2>Our Mission</h2>
-      <p>
-        We aim to inspire Jefferson High students to explore technology,  
-        develop coding skills, and apply their creativity through real-world projects.
-      </p>
-    </div>
 
-  <br>
-<br>
-  
-  <!-- Guest Speakers -->
-    <div class="info-box">
-      <h2>Guest Speakers</h2>
-      <p>
-        Our club regularly hosts guest speakers from tech and software careers.  
-        These talks inspire students by showing the many paths computer science can lead to.
-      </p>
-    </div>
 
+  
+
+
+
+<!-- Mission & Guest Speakers Section -->
+<style>
+  /* Section styling */
+  .section {
+    max-width: 800px;
+    margin: 50px auto; /* vertical spacing */
+    padding: 20px;
+    background: rgba(255, 255, 255, 0.05); /* subtle background */
+    border-radius: 15px;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+  }
+
+  /* Info-box titles */
+  .info-box h2 {
+    color: #F2C57C; /* theme color */
+    font-size: 28px;
+    margin-bottom: 15px;
+    text-align: center;
+  }
+
+  /* Paragraphs */
+  .info-box p {
+    font-size: 18px;
+    line-height: 1.6;
+    text-align: center;
+    color: #ffffff;
+  }
+
+  /* CTA button */
+  .cta a {
+    display: inline-block;
+    margin-top: 20px;
+    padding: 12px 25px;
+    background-color: #44BBA4; /* theme accent color */
+    color: white;
+    text-decoration: none;
+    border-radius: 8px;
+    font-weight: bold;
+    transition: 0.3s;
+  }
+
+  .cta a:hover {
+    background-color: #3aa591;
+    transform: translateY(-2px);
+  }
+</style>
+
+<section class="section">
+  <div class="info-box">
+    <h2>Our Mission</h2>
+    <p>
+      We aim to inspire Jefferson High students to explore technology,  
+      develop coding skills, and apply their creativity through real-world projects.
+    </p>
+  </div>
+</section>
+
+<section class="section">
+  <div class="info-box">
+    <h2>Guest Speakers</h2>
+    <p>
+      Our club regularly hosts guest speakers from tech and software careers.  
+      These talks inspire students by showing the many paths computer science can lead to.
+    </p>
     <div class="cta">
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxVOaNdsKPMFba6CWx1SLIHg5NZf8zROF7osJ8x9bDNVJmqA/viewform?usp=header" target="_blank">
         Become a Guest Speaker
       </a>
     </div>
-
-  <br>
-
-  
-
-
-
-
+  </div>
+</section>
 
 
 
